fix: 🐛 Fixed Crafting Tweaks refill in crafting upgrades